--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Computing saliency masks with the TensorFlow saliency library\n",
+    "# Computing saliency masks\n",
     "\n",
     "This notebook demonstrates a number of saliency mask techniques, augmented with the SmoothGrad technique. The intention of this notebook is to have as few dependencies as possible to show how to compute masks.\n",
     "\n",
