Fix ipynb for integrated gradients. Initializing -1 baseline should use np.zeros, not np.array

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Computing saliency masks\n",
+    "# Computing saliency masks with the PAIRML saliency library\n",
     "\n",
     "This notebook demonstrates a number of saliency mask techniques, augmented with the SmoothGrad technique. The intention of this notebook is to have as few dependencies as possible to show how to compute masks.\n",
     "\n",
@@ -359,7 +359,7 @@
     "integrated_gradients = IntegratedGradients(graph, sess, y, images)\n",
     "\n",
     "# Baseline is a black image.\n",
-    "baseline = np.array(im.shape)\n",
+    "baseline = np.zeros(im.shape)\n",
     "baseline.fill(-1)\n",
     "\n",
     "# Compute the vanilla mask and the smoothed mask.\n",
