--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -53,9 +53,7 @@
     "from matplotlib import pylab as P\n",
     "import pickle\n",
     "import os\n",
-    "import tensorflow.contrib.slim as slim\n",
-    "from tensorflow.contrib.framework import get_or_create_global_step\n",
-    "\n",
+    "slim=tf.contrib.slim\n",
     "\n",
     "if not os.path.exists('models/slim'):\n",
     "  !git clone https://github.com/tensorflow/models/\n",
