small notebook update

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -151,7 +151,9 @@
     "if not os.path.exists('inception_v3.ckpt'):\n",
     "  #!wget http://download.tensorflow.org/models/inception_v3_2016_08_28.tar.gz\n",
     "  !curl -O http://download.tensorflow.org/models/inception_v3_2016_08_28.tar.gz\n",
-    "  !tar -xvzf inception_v3_2016_08_28.tar.gz"
+    "  !tar -xvzf inception_v3_2016_08_28.tar.gz\n",
+    "\n",
+    "ckpt_file = './inception_v3.ckpt'"
    ]
   },
   {
@@ -186,7 +188,7 @@
     "    # Restore the checkpoint\n",
     "    sess = tf.Session(graph=graph)\n",
     "    saver = tf.train.Saver()\n",
-    "    saver.restore(sess, './inception_v3.ckpt')\n",
+    "    saver.restore(sess, ckpt_file)\n",
     "    \n",
     "  # Construct the scalar neuron tensor.\n",
     "  logits = graph.get_tensor_by_name('InceptionV3/Logits/SpatialSqueeze:0')\n",
