Update notebook to reflect the reorg

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -37,11 +37,11 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'models'...\n",
-      "remote: Counting objects: 5836, done.\u001b[K\n",
-      "remote: Compressing objects: 100% (11/11), done.\u001b[K\n",
-      "remote: Total 5836 (delta 4), reused 8 (delta 1), pack-reused 5824\u001b[K\n",
-      "Receiving objects: 100% (5836/5836), 157.18 MiB | 3.19 MiB/s, done.\n",
-      "Resolving deltas: 100% (2934/2934), done.\n"
+      "remote: Counting objects: 5875, done.\u001b[K\n",
+      "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+      "remote: Total 5875 (delta 2), reused 4 (delta 1), pack-reused 5869\u001b[K\n",
+      "Receiving objects: 100% (5875/5875), 157.19 MiB | 51.13 MiB/s, done.\n",
+      "Resolving deltas: 100% (2962/2962), done.\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
     "os.chdir(old_cwd)\n",
     "\n",
     "# From our repository.\n",
-    "import __init__ as saliency\n",
+    "import saliency\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -415,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
