Fix the model directory name to follow changes in the tensorflow/models repo

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -53,10 +53,10 @@
     "import os\n",
     "slim=tf.contrib.slim\n",
     "\n",
-    "if not os.path.exists('models/slim'):\n",
+    "if not os.path.exists('models/research/slim'):\n",
     "  !git clone https://github.com/tensorflow/models/\n",
     "old_cwd = os.getcwd()\n",
-    "os.chdir('models/slim')\n",
+    "os.chdir('models/research/slim')\n",
     "from nets import inception_v3\n",
     "os.chdir(old_cwd)\n",
     "\n",
