set call_model_args default to None

--- a/Examples_core.ipynb
+++ b/Examples_core.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "class_idx_str = 'class_idx_str'\n",
-    "def call_model_function(images, call_model_args={}, expected_keys=None):\n",
+    "def call_model_function(images, call_model_args=None, expected_keys=None):\n",
     "    target_class_idx =  call_model_args[class_idx_str]\n",
     "    images = tf.convert_to_tensor(images)\n",
     "    with tf.GradientTape() as tape:\n",
