Addressed review #1 comments.

--- a/Examples_core.ipynb
+++ b/Examples_core.ipynb
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Integrated Gradients & SmoothGrad\n",
+    "### Integrated Gradients & SmoothGrad\n",
     "\n",
     "For saliency methods that compute gradients along a path (e.g. Integrated Gradients), we can pass a batch_size parameter, which will batch the different steps along the path together so that the model isn't called for each individual step. When using this parameter, be sure that you are not overloading memory, as a very large batch size could crash the program."
    ]
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XRAI Full and Fast"
+    "### XRAI Full and Fast"
    ]
   },
   {
