Update first section text

--- a/Examples_pytorch.ipynb
+++ b/Examples_pytorch.ipynb
@@ -4,19 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computing saliency masks with the PAIRML saliency library (for TF2 and other frameworks)\n",
+    "# Computing saliency masks with the PAIRML saliency library (for PyTorch and other frameworks)\n",
     "\n",
-    "This notebook demonstrates a number of saliency mask techniques, augmented with the `SmoothGrad` technique, using the VGG16 convolutional neural network in TF2. The intention of this notebook is to have as few dependencies as possible to show how to compute masks for ML frameowrks.\n",
+    "This notebook demonstrates a number of saliency mask techniques, augmented with the `SmoothGrad` technique, using the Inception V3 convolutional neural network. The intention of this notebook is to have as few dependencies as possible to show how to compute masks.\n",
     "\n",
     "This notebook shows the following techniques, alongside with the `SmoothGrad` augmentation:\n",
     "\n",
     "*   Vanilla Gradients\n",
     "    ([paper](https://scholar.google.com/scholar?q=Visualizing+higher-layer+features+of+a+deep+network&btnG=&hl=en&as_sdt=0%2C22),\n",
     "    [paper](https://arxiv.org/abs/1312.6034))\n",
+    "*   Guided Backpropogation ([paper](https://arxiv.org/abs/1412.6806))\n",
     "*   Integrated Gradients ([paper](https://arxiv.org/abs/1703.01365))\n",
     "*   XRAI ([paper](https://arxiv.org/abs/1906.02825))\n",
     "*   Grad-CAM ([paper](https://arxiv.org/abs/1610.02391))\n",
     "*   Blur IG ([paper](https://arxiv.org/abs/2004.03383))\n",
+    "*   Guided IG (TBD)\n",
     "\n",
     "This notebook assumes you have the `saliency` pip package installed. To install run (use `pip3` for python 3.x):\n",
     "```\n",
