Update notebooks with arxiv links

--- a/Examples_core.ipynb
+++ b/Examples_core.ipynb
@@ -17,7 +17,7 @@
     "*   XRAI ([paper](https://arxiv.org/abs/1906.02825))\n",
     "*   Grad-CAM ([paper](https://arxiv.org/abs/1610.02391))\n",
     "*   Blur IG ([paper](https://arxiv.org/abs/2004.03383))\n",
-    "*   Guided IG (TBD)\n",
+    "*   Guided IG ([paper](https://arxiv.org/abs/2106.09788))\n",
     "\n",
     "This notebook assumes you have the `saliency` pip package installed. To install run (use `pip3` for python 3.x):\n",
     "```\n",
