--- a/Examples_pytorch.ipynb
+++ b/Examples_pytorch.ipynb
@@ -13,12 +13,11 @@
     "*   Vanilla Gradients\n",
     "    ([paper](https://scholar.google.com/scholar?q=Visualizing+higher-layer+features+of+a+deep+network&btnG=&hl=en&as_sdt=0%2C22),\n",
     "    [paper](https://arxiv.org/abs/1312.6034))\n",
-    "*   Guided Backpropogation ([paper](https://arxiv.org/abs/1412.6806))\n",
     "*   Integrated Gradients ([paper](https://arxiv.org/abs/1703.01365))\n",
     "*   XRAI ([paper](https://arxiv.org/abs/1906.02825))\n",
     "*   Grad-CAM ([paper](https://arxiv.org/abs/1610.02391))\n",
     "*   Blur IG ([paper](https://arxiv.org/abs/2004.03383))\n",
-    "*   Guided IG (TBD)\n",
+    "*   Guided IG ([paper](https://arxiv.org/abs/2106.09788))\n",
     "\n",
     "This notebook assumes you have the `saliency` pip package installed. To install run (use `pip3` for python 3.x):\n",
     "```\n",
